# FAT12

./: CMakeLists.txt  Dockerfile
.github/workflows/: azure-webapps-node.yml  docker.yml
C Main File/: main.c
Hardware Abstraction Layer/: HAL.h
HardwareAbstractionLayer/: HAL.c
UserApplication/: menu.c  menu.h
fat_fs/: fat_fs.c  fat_fs.h
